--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
           <a class="logo" href="./index.html"
             >Web<span class="logo-studio-color">Studio</span></a
           >
-          <!-- <button type="button" class="menu-open-btn"></button> -->
           <button type="button" class="menu-close-btn">
             <svg class="menu-btn-icon" width="24" height="24">
               <use href="./images/icons.svg#icon-heroicons"></use>
@@ -59,12 +58,13 @@
             </li>
           </ul>
         </address>
+        <!-- <button type="button" class="menu-open-btn"></button> -->
       </div>
 
       <div class="menu">
-        <div class="">
-          <button type="button" class="menu-close-batton">
-            <svg class="menu-close-icon" width="8" heoght="8">
+        <div>
+          <button type="button" class="menu-close-button">
+            <svg width="8" heoght="8">
               <use href="./images/icons.svg#icon-close"></use>
             </svg>
           </button>
@@ -76,44 +76,44 @@
             </ul>
           </nav>
         </div>
-        <address>
-          <div class="menu-contacts">
-            <ul class="menu-contacts-list">
-              <li class="contacts-item">
-                <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-              </li>
-              <li class="contacts-item">
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-              </li>
-            </ul>
-          </div>
-        </address>
+        <ul class="menu-contacts-list">
+          <li class="contacts-item">
+            <a class="menu-contacts-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+          <li class="contacts-item">
+            <a class="menu-contacts-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
         <div class="menu-social-icons">
           <ul class="menu-icons-list">
             <li class="menu-icons-item">
               <a href="" class="menu-link">
-                <svg class="social-icons" width="24" height="24">
+                <svg class="menu-social-icons" width="16" height="16">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="menu-icons-item">
               <a href="" class="menu-link">
-                <svg class="social-icons" width="24" height="24">
+                <svg class="menu-social-icons" width="16" height="16">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="menu-icons-item">
               <a href="" class="menu-link">
-                <svg class="social-icons" width="24" height="24">
+                <svg class="menu-social-icons" width="16" height="16">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="menu-icons-item">
               <a href="" class="menu-link">
-                <svg class="social-icons" width="24" height="24">
+                <svg class="menu-social-icons" width="16" height="16">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
@@ -714,7 +714,7 @@
       </div>
     </footer>
 
-    <!-- <div class="backdrop">
+    <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-close">
           <svg class="close-icon" width="8" height="8">
@@ -799,6 +799,6 @@
           <button type="submit" class="form-button">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
   </body>
 </html>
