--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="menu">
         <div>
           <button type="button" class="menu-close-button">
-            <svg width="8" heoght="8">
+            <svg width="8" height="8">
               <use href="./images/icons.svg#icon-close"></use>
             </svg>
           </button>
@@ -392,6 +392,13 @@
                 <picture>
                   <source
                     srcset="
+                      ./images/Banking-mob-1x.jpg 1x,
+                      ./images/Banking-mob-2x.jpg 2x
+                    "
+                    media="(min-width: 320px)"
+                  />
+                  <source
+                    srcset="
                       ./images/banking-tab-1x.jpg 1x,
                       ./images/banking-tab-2x.jpg 2x
                     "
@@ -405,7 +412,7 @@
                     media="(min-width: 1158px)"
                   />
                   <img
-                    src="./images/banking-tab-1x.jpg"
+                    src="./images/banking-pc-1x.jpg"
                     alt="Banling app"
                     width="360"
                     height="300"
@@ -428,8 +435,11 @@
               <div class="portfolio-overlay">
                 <picture>
                   <source
-                    srcset="./images/Cashless-payment-mob 1x.jpg 1x, ./images/Cashless-payment-mob 1x.jpg 2x"
-                    media="(min-sidth: 320px)"
+                    srcset="
+                      ./images/cashless-mob-1x.jpg 1x,
+                      ./images/cashless-mob-2x.jpg 2x
+                    "
+                    media="(min-width: 320px)"
                   />
                   <source
                     srcset="
@@ -446,7 +456,7 @@
                     media="(min-width: 1158px)"
                   />
                   <img
-                    src="./images/Cashless-payment-mob-1x.jpg"
+                    src="./images/cashless-mob-1x.jpg"
                     alt="Banling app"
                     width="360"
                     height="300"
@@ -470,7 +480,7 @@
                   <source
                     srcset="
                       ./images/Meditation-app-mob-1x.jpg 1x,
-                      ./images/Meditation-app-mob-1x.jpg 2x
+                      ./images/Meditation-app-mob-2x.jpg 2x
                     "
                     media="(min-width: 320px)"
                   />
@@ -483,8 +493,8 @@
                   />
                   <source
                     srcset="
-                      ./images/meditation-pc-1z.jpg 1x,
-                      ./images/meditation-pc-2z.jpg 2x
+                      ./images/meditation-pc-1x.jpg 1x,
+                      ./images/meditation-pc-2.jpg  2x
                     "
                     media="(min-width: 1158px)"
                   />
